<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_list_page_first_account_button_done">Add account</string>
    <string name="account_list_page_first_account_message_detail">When you\'re asked for a verification code, get it here. The code changes frequently, so no need to memorize it.</string>
    <string name="account_list_page_first_account_message_header">Account added</string>
    <string name="accounts_reorder_failed">Failed to reorder accounts. Please try again later.</string>
    <string name="add_account_label">Add account</string>
    <string name="advance_pending_import">On the other device, go to QR code %1$d of %2$d</string>
    <string name="app_name">Google Authenticator</string>
    <string name="app_name_short">Authenticator</string>
    <string name="audit_log_account_added">Added account \"%s\"</string>
    <string name="audit_log_accounts_exported_butterbar_text">Accounts were recently exported</string>
    <string name="audit_log_accounts_exported_notification_text">Your Google Authenticator accounts were recently exported</string>
    <string name="audit_log_accounts_exported_notification_title">Accounts exported</string>
    <string name="audit_log_accounts_imported_butterbar_text">Accounts were recently imported</string>
    <string name="audit_log_accounts_imported_notification_text">You recently imported some accounts into Google Authenticator</string>
    <string name="audit_log_accounts_imported_notification_title">Accounts imported</string>
    <string name="audit_log_button">Recent activity</string>
    <string name="audit_log_no_recent_events">No recent events!</string>
    <string name="audit_log_page_description"> Actions you have recently taken with Google Authenticator on this device\n\nNotice anything suspicious?  Reset 2-Step Verification  on this Google account and any other accounts you use with Google Authenticator. </string>
    <string name="audit_log_page_title">Recent activity</string>
    <string name="barcode_instruction_text">Place QR code within red lines</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_done">Done</string>
    <string name="button_import_qr_code">Scan QR code</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="camera_not_found_on_device_detail">Google Authenticator needs a camera to scan QR codes</string>
    <string name="camera_not_found_on_device_title">Your device doesn\'t have a camera</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_code">To check that you have the correct key value for %1$s verify that the value here matches the integrity check value provided by the server:&lt;br/&gt;</string>
    <string name="check_code_menu_item">Check key value</string>
    <string name="check_code_title">Integrity check value</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_label">OTP Code</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="context_menu_remove_account">Remove</string>
    <string name="copied_to_clipboard_toast">Verification code copied to clipboard.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="counter_based_otp_type">Counter based</string>
    <string name="counter_pin">Get code</string>
    <string name="decoding_exception">Decoding exception</string>
    <string name="empty_pin">_ _ _ _ _ _</string>
    <string name="enroll2sv_choose_account_page_description">Use the QR code or setup key in your 2FA settings (by Google or third-party service). If you\'re having trouble, go to g.co/2sv</string>
    <string name="enroll2sv_choose_account_page_enter_key_label">Enter a setup key</string>
    <string name="enroll2sv_choose_account_page_import_accounts_label">Import existing accounts?</string>
    <string name="enroll2sv_choose_account_page_scan_barcode_label">Scan a QR code</string>
    <string name="enroll2sv_choose_account_page_title">Setup your first account</string>
    <string name="enter_account_label">Account name</string>
    <string name="enter_account_name_missing">Enter a name for this account</string>
    <string name="enter_key_hint">Your key</string>
    <string name="enter_key_illegal_char">Key value has illegal character</string>
    <string name="enter_key_page_add_button">Add</string>
    <string name="enter_key_title">Enter account details</string>
    <string name="enter_key_too_short">Key value is too short</string>
    <string name="error_exists">Sorry, that name is already in use.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_invalid_device">Cannot add account. Please contact the TechStop for assistance.</string>
    <string name="error_outdated_migration">Please update this app in the Play Store in order to scan this QR code.</string>
    <string name="error_qr">Cannot interpret QR code.</string>
    <string name="error_title">Error</string>
    <string name="error_uri">Key not recognized.</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="general_security_exception">General security exception</string>
    <string name="gm_sys_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="gm_sys_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="gm_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="gm_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="gm_sys_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="help_and_feedback_menu_item">Help &amp; feedback</string>
    <string name="how_it_works_menu_item">How it works</string>
    <string name="howitworks_page_button_done">Done</string>
    <string name="howitworks_page_button_get_started">Get started</string>
    <string name="howitworks_page_button_next">Next</string>
    <string name="howitworks_page_layout_1_description">To setup an account, you\'ll scan the QR code in your 2-Step Verification settings for Google or any third-party service</string>
    <string name="howitworks_page_layout_1_title">Simple setup using your camera</string>
    <string name="howitworks_page_layout_2_description">When using 2-Step Verification, you\'ll enter your password and a code from this app</string>
    <string name="howitworks_page_layout_2_title">A unique code used to sign in</string>
    <string name="howitworks_page_title">How it works</string>
    <string name="keep_both_accounts">Keep both</string>
    <string name="main_preference_screen_title">Settings</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="migration_import_page_instructions_step_1">1. Tap the overflow button at the top-right of the app</string>
    <string name="migration_import_page_instructions_step_2">2. Find \"Transfer accounts\" from the menu, then follow the instructions to continue</string>
    <string name="migration_import_page_subtitle">You\'ll need to select the accounts you want to transfer from the Google Authenticator app on your old device.</string>
    <string name="migration_import_page_title">Go to your old device</string>
    <string name="migration_page_introduction_description">You can transfer your accounts to a new device that has Google Authenticator.</string>
    <string name="migration_page_introduction_export_description">Create a QR code to export your accounts</string>
    <string name="migration_page_introduction_export_heading">Export accounts</string>
    <string name="migration_page_introduction_import_description">Scan a QR code to bring new accounts in</string>
    <string name="migration_page_introduction_import_heading">Import accounts</string>
    <string name="migration_page_title">Transfer accounts</string>
    <string name="type_prompt">Type of key</string>
</resources>