<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:app2="http://schemas.android.com/apk/lib/com.google.android.apps.authenticator2" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar android:id="@+id/enter_key_toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/toolbar_height"/>
    <ScrollView android:paddingTop="24dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/enter_key_toolbar">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/account_name_input_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="66dp" android:hint="@string/enter_account_label" android:labelFor="@+id/account_name" android:accessibilityLiveRegion="polite" style="@style/Widget.GoogleMaterial.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/account_name" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/key_value_input_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:minHeight="66dp" android:hint="@string/enter_key_hint" android:labelFor="@+id/key_value" android:accessibilityLiveRegion="polite">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/key_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textVisiblePassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/type_prompt" android:layout_weight="1" style="@style/Widget.GoogleMaterial.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView android:id="@+id/enter_key_exposed_dropdown" android:layout_width="match_parent" android:layout_height="wrap_content" android:editable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
                <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
                <Button android:layout_gravity="bottom|right" android:id="@+id/add_account_button_enter_key" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="96dp" android:minHeight="48dp" android:text="@string/enter_key_page_add_button" style="@style/Widget.GoogleMaterial.Button"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
