<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#fff" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar android:id="@+id/add_account_toolbar" android:background="?attr/colorPrimary" android:paddingLeft="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/toolbar_height" android:paddingStart="8dp" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:theme="@style/WhiteActionBar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="24dp" android:layout_marginRight="24dp">
            <ImageView android:layout_width="match_parent" android:layout_height="32dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:src="@drawable/quantum_gm_ic_account_box_googblue_48"/>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="24sp" android:textColor="@color/primaryTextColor" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="24dp" android:text="@string/enroll2sv_choose_account_page_title" android:fontFamily="sans-serif"/>
                <TextView android:textSize="14sp" android:textColor="@color/primaryTextColor" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/enroll2sv_choose_account_page_description" android:lineSpacingExtra="8dp"/>
            </LinearLayout>
            <View android:background="@color/google_grey300" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="24dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/enroll2sv_choose_account_page_scan_barcode_layout" android:background="?attr/selectableItemBackground" android:paddingTop="21dp" android:paddingBottom="21dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center_vertical" android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/quantum_gm_ic_local_see_googblue_24" android:adjustViewBounds="true"/>
                <TextView android:textSize="14sp" android:textColor="@color/primaryTextColor" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/enroll2sv_choose_account_page_scan_barcode_label" android:lineSpacingExtra="8dp" android:fontFamily="sans-serif" android:layout_marginStart="24dp"/>
            </LinearLayout>
            <View android:background="@color/google_grey300" android:layout_width="match_parent" android:layout_height="1dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/enroll2sv_choose_account_page_enter_key_layout" android:background="?attr/selectableItemBackground" android:paddingTop="21dp" android:paddingBottom="21dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center_vertical" android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/quantum_gm_ic_keyboard_googblue_24" android:adjustViewBounds="true"/>
                <TextView android:textSize="14sp" android:textColor="@color/primaryTextColor" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/enroll2sv_choose_account_page_enter_key_label" android:lineSpacingExtra="8dp" android:fontFamily="sans-serif" android:layout_marginStart="24dp"/>
            </LinearLayout>
            <View android:background="@color/google_grey300" android:layout_width="match_parent" android:layout_height="1dp"/>
            <LinearLayout android:gravity="bottom" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="18dp" android:layout_marginBottom="18dp">
                <Button android:layout_gravity="start|bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enroll2sv_choose_account_page_import_accounts_label" android:onClick="buttonImportClicked" android:fontFamily="sans-serif" style="@style/Widget.GoogleMaterial.Button.TextButton"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
